# Sentinel-Discord-Bot

./: .gitignore  Makefile  README.md  app.env  pyproject.toml
sentinel_discord_bot/: __init__.py
sentinel_discord_bot_v2/: __init__.py  config.py  schemas.py  sentinel_backend.py
sentinel_discord_bot_v2/command_groups/: amnesties.py  punishments.py
tests/: test_sentinel_discord_bot_v2.py
