[tool.poetry]
name = "Sentinel-discord-bot"
version = "0.1.0"
description = ""
authors = ["Nick Troshnev <nik.troshnev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
py-cord = "^2.0.0"
loguru = "^0.6.0"
python-dotenv = "^0.20.0"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
